# BlinkSpark

./: .gitattributes  .gitignore  Cargo.toml  MACOS_BUILD_CN.md  README.md  WINDOWS_BUILD_CN.md  build.rs
assets/branding/: README.md
scripts/: generate_logo_assets.ps1  generate_macos_icon.sh  package_macos.sh
src/: main.rs
src/notifier/: mod.rs
